BCC__BCC36B__P[2]__GabrielNegrao_1602012/Implementação/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     lista_declaracoes -> declaracao
Rule 4     declaracao -> declaracao_variaveis
Rule 5     declaracao -> inicializacao_variaveis
Rule 6     declaracao -> declaracao_funcao
Rule 7     declaracao_variaveis -> tipo DOISPONTOS lista_variaveis
Rule 8     inicializacao_variaveis -> atribuicao
Rule 9     atribuicao -> var ATRIBUICAO expressao
Rule 10    lista_variaveis -> lista_variaveis VIRGULA var
Rule 11    lista_variaveis -> var
Rule 12    var -> IDENTIFICADOR
Rule 13    var -> IDENTIFICADOR indice
Rule 14    indice -> indice ABRECOL expressao FECHACOL
Rule 15    indice -> ABRECOL expressao FECHACOL
Rule 16    indice -> ABRECOL IDENTIFICADOR FECHACOL
Rule 17    tipo -> INTEIRO
Rule 18    tipo -> FLUTUANTE
Rule 19    declaracao_funcao -> tipo cabecalho
Rule 20    declaracao_funcao -> cabecalho
Rule 21    cabecalho -> IDENTIFICADOR ABREPAR lista_parametros FECHAPAR corpo FIM
Rule 22    cabecalho -> PRINCIPAL ABREPAR lista_parametros FECHAPAR corpo FIM
Rule 23    lista_parametros -> lista_parametros VIRGULA parametro
Rule 24    lista_parametros -> parametro
Rule 25    lista_parametros -> vazio
Rule 26    parametro -> tipo DOISPONTOS IDENTIFICADOR
Rule 27    parametro -> parametro ABRECOL FECHACOL
Rule 28    corpo -> corpo acao
Rule 29    corpo -> vazio
Rule 30    acao -> expressao
Rule 31    acao -> declaracao_variaveis
Rule 32    acao -> se
Rule 33    acao -> repita
Rule 34    acao -> leia
Rule 35    acao -> escreva
Rule 36    acao -> retorna
Rule 37    acao -> error
Rule 38    se -> SE expressao ENTAO corpo FIM
Rule 39    se -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 40    repita -> REPITA corpo ATE expressao
Rule 41    leia -> LEIA ABREPAR IDENTIFICADOR FECHAPAR
Rule 42    escreva -> ESCREVA ABREPAR expressao FECHAPAR
Rule 43    escreva -> ESCREVA ABREPAR chamada_funcao FECHAPAR
Rule 44    retorna -> RETORNA ABREPAR expressao FECHAPAR
Rule 45    retorna -> RETORNA ABREPAR IDENTIFICADOR FECHAPAR
Rule 46    expressao -> expressao_simples
Rule 47    expressao -> ATRIBUICAO
Rule 48    expressao_simples -> expressao_aditiva
Rule 49    expressao_simples -> expressao_simples operador_relacional expressao_aditiva
Rule 50    expressao_aditiva -> expressao_multiplicativa
Rule 51    expressao_aditiva -> expressao_aditiva operador_soma expressao_multiplicativa
Rule 52    expressao_multiplicativa -> expressao_unaria
Rule 53    expressao_multiplicativa -> expressao_multiplicativa operador_multiplicacao expressao_unaria
Rule 54    expressao_unaria -> fator
Rule 55    expressao_unaria -> operador_soma fator
Rule 56    operador_relacional -> MENOR
Rule 57    operador_relacional -> MAIOR
Rule 58    operador_relacional -> IGUALDADE
Rule 59    operador_relacional -> DIFERENTE
Rule 60    operador_relacional -> MENORIGUAL
Rule 61    operador_relacional -> MAIORIGUAL
Rule 62    operador_relacional -> NEGACAO
Rule 63    operador_relacional -> ELOGICO
Rule 64    operador_soma -> SOMA
Rule 65    operador_soma -> SUBTRACAO
Rule 66    operador_multiplicacao -> MULTIPLICACAO
Rule 67    operador_multiplicacao -> DIVISAO
Rule 68    fator -> ABREPAR expressao FECHAPAR
Rule 69    fator -> var
Rule 70    fator -> chamada_funcao
Rule 71    fator -> numero
Rule 72    numero -> NUMERO
Rule 73    numero -> NUMEROCIENTIFICO
Rule 74    chamada_funcao -> IDENTIFICADOR ABREPAR lista_argumentos FECHAPAR
Rule 75    lista_argumentos -> lista_argumentos VIRGULA expressao
Rule 76    lista_argumentos -> expressao
Rule 77    lista_argumentos -> vazio
Rule 78    vazio -> <empty>

Terminals, with rules where they appear

ABRECOL              : 14 15 16 27
ABREPAR              : 21 22 41 42 43 44 45 68 74
ATE                  : 40
ATRIBUICAO           : 9 47
DIFERENTE            : 59
DIVISAO              : 67
DOISPONTOS           : 7 26
ELOGICO              : 63
ENTAO                : 38 39
ESCREVA              : 42 43
FECHACOL             : 14 15 16 27
FECHAPAR             : 21 22 41 42 43 44 45 68 74
FIM                  : 21 22 38 39
FLUTUANTE            : 18
IDENTIFICADOR        : 12 13 16 21 26 41 45 74
IGUALDADE            : 58
INTEIRO              : 17
LEIA                 : 41
MAIOR                : 57
MAIORIGUAL           : 61
MENOR                : 56
MENORIGUAL           : 60
MULTIPLICACAO        : 66
NEGACAO              : 62
NUMERO               : 72
NUMEROCIENTIFICO     : 73
PRINCIPAL            : 22
REPITA               : 40
RETORNA              : 44 45
SE                   : 38 39
SENAO                : 39
SOMA                 : 64
SUBTRACAO            : 65
VIRGULA              : 10 23 75
error                : 37

Nonterminals, with rules where they appear

acao                 : 28
atribuicao           : 8
cabecalho            : 19 20
chamada_funcao       : 43 70
corpo                : 21 22 28 38 39 39 40
declaracao           : 2 3
declaracao_funcao    : 6
declaracao_variaveis : 4 31
escreva              : 35
expressao            : 9 14 15 30 38 39 40 42 44 68 75 76
expressao_aditiva    : 48 49 51
expressao_multiplicativa : 50 51 53
expressao_simples    : 46 49
expressao_unaria     : 52 53
fator                : 54 55
indice               : 13 14
inicializacao_variaveis : 5
leia                 : 34
lista_argumentos     : 74 75
lista_declaracoes    : 1 2
lista_parametros     : 21 22 23
lista_variaveis      : 7 10
numero               : 71
operador_multiplicacao : 53
operador_relacional  : 49
operador_soma        : 51 55
parametro            : 23 24 27
programa             : 0
repita               : 33
retorna              : 36
se                   : 32
tipo                 : 7 19 26
var                  : 9 10 11 69
vazio                : 25 29 77

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) lista_declaracoes -> . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOISPONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (19) declaracao_funcao -> . tipo cabecalho
    (20) declaracao_funcao -> . cabecalho
    (17) tipo -> . INTEIRO
    (18) tipo -> . FLUTUANTE
    (9) atribuicao -> . var ATRIBUICAO expressao
    (21) cabecalho -> . IDENTIFICADOR ABREPAR lista_parametros FECHAPAR corpo FIM
    (22) cabecalho -> . PRINCIPAL ABREPAR lista_parametros FECHAPAR corpo FIM
    (12) var -> . IDENTIFICADOR
    (13) var -> . IDENTIFICADOR indice

    INTEIRO         shift and go to state 2
    FLUTUANTE       shift and go to state 3
    IDENTIFICADOR   shift and go to state 12
    PRINCIPAL       shift and go to state 1

    tipo                           shift and go to state 10
    atribuicao                     shift and go to state 9
    var                            shift and go to state 14
    inicializacao_variaveis        shift and go to state 5
    lista_declaracoes              shift and go to state 6
    cabecalho                      shift and go to state 13
    declaracao_variaveis           shift and go to state 8
    programa                       shift and go to state 7
    declaracao                     shift and go to state 11
    declaracao_funcao              shift and go to state 4

state 1

    (22) cabecalho -> PRINCIPAL . ABREPAR lista_parametros FECHAPAR corpo FIM

    ABREPAR         shift and go to state 15


state 2

    (17) tipo -> INTEIRO .

    DOISPONTOS      reduce using rule 17 (tipo -> INTEIRO .)
    IDENTIFICADOR   reduce using rule 17 (tipo -> INTEIRO .)
    PRINCIPAL       reduce using rule 17 (tipo -> INTEIRO .)


state 3

    (18) tipo -> FLUTUANTE .

    DOISPONTOS      reduce using rule 18 (tipo -> FLUTUANTE .)
    IDENTIFICADOR   reduce using rule 18 (tipo -> FLUTUANTE .)
    PRINCIPAL       reduce using rule 18 (tipo -> FLUTUANTE .)


state 4

    (6) declaracao -> declaracao_funcao .

    INTEIRO         reduce using rule 6 (declaracao -> declaracao_funcao .)
    FLUTUANTE       reduce using rule 6 (declaracao -> declaracao_funcao .)
    IDENTIFICADOR   reduce using rule 6 (declaracao -> declaracao_funcao .)
    PRINCIPAL       reduce using rule 6 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 6 (declaracao -> declaracao_funcao .)


state 5

    (5) declaracao -> inicializacao_variaveis .

    INTEIRO         reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    FLUTUANTE       reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    IDENTIFICADOR   reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    PRINCIPAL       reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    $end            reduce using rule 5 (declaracao -> inicializacao_variaveis .)


state 6

    (1) programa -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOISPONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (19) declaracao_funcao -> . tipo cabecalho
    (20) declaracao_funcao -> . cabecalho
    (17) tipo -> . INTEIRO
    (18) tipo -> . FLUTUANTE
    (9) atribuicao -> . var ATRIBUICAO expressao
    (21) cabecalho -> . IDENTIFICADOR ABREPAR lista_parametros FECHAPAR corpo FIM
    (22) cabecalho -> . PRINCIPAL ABREPAR lista_parametros FECHAPAR corpo FIM
    (12) var -> . IDENTIFICADOR
    (13) var -> . IDENTIFICADOR indice

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    INTEIRO         shift and go to state 2
    FLUTUANTE       shift and go to state 3
    IDENTIFICADOR   shift and go to state 12
    PRINCIPAL       shift and go to state 1

    tipo                           shift and go to state 10
    atribuicao                     shift and go to state 9
    var                            shift and go to state 14
    declaracao_funcao              shift and go to state 4
    inicializacao_variaveis        shift and go to state 5
    declaracao                     shift and go to state 16
    cabecalho                      shift and go to state 13
    declaracao_variaveis           shift and go to state 8

state 7

    (0) S' -> programa .



state 8

    (4) declaracao -> declaracao_variaveis .

    INTEIRO         reduce using rule 4 (declaracao -> declaracao_variaveis .)
    FLUTUANTE       reduce using rule 4 (declaracao -> declaracao_variaveis .)
    IDENTIFICADOR   reduce using rule 4 (declaracao -> declaracao_variaveis .)
    PRINCIPAL       reduce using rule 4 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 4 (declaracao -> declaracao_variaveis .)


state 9

    (8) inicializacao_variaveis -> atribuicao .

    INTEIRO         reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    FLUTUANTE       reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    IDENTIFICADOR   reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    PRINCIPAL       reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    $end            reduce using rule 8 (inicializacao_variaveis -> atribuicao .)


state 10

    (7) declaracao_variaveis -> tipo . DOISPONTOS lista_variaveis
    (19) declaracao_funcao -> tipo . cabecalho
    (21) cabecalho -> . IDENTIFICADOR ABREPAR lista_parametros FECHAPAR corpo FIM
    (22) cabecalho -> . PRINCIPAL ABREPAR lista_parametros FECHAPAR corpo FIM

    DOISPONTOS      shift and go to state 17
    IDENTIFICADOR   shift and go to state 19
    PRINCIPAL       shift and go to state 1

    cabecalho                      shift and go to state 18

state 11

    (3) lista_declaracoes -> declaracao .

    INTEIRO         reduce using rule 3 (lista_declaracoes -> declaracao .)
    FLUTUANTE       reduce using rule 3 (lista_declaracoes -> declaracao .)
    IDENTIFICADOR   reduce using rule 3 (lista_declaracoes -> declaracao .)
    PRINCIPAL       reduce using rule 3 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 3 (lista_declaracoes -> declaracao .)


state 12

    (21) cabecalho -> IDENTIFICADOR . ABREPAR lista_parametros FECHAPAR corpo FIM
    (12) var -> IDENTIFICADOR .
    (13) var -> IDENTIFICADOR . indice
    (14) indice -> . indice ABRECOL expressao FECHACOL
    (15) indice -> . ABRECOL expressao FECHACOL
    (16) indice -> . ABRECOL IDENTIFICADOR FECHACOL

    ABREPAR         shift and go to state 21
    ATRIBUICAO      reduce using rule 12 (var -> IDENTIFICADOR .)
    ABRECOL         shift and go to state 20

    indice                         shift and go to state 22

state 13

    (20) declaracao_funcao -> cabecalho .

    INTEIRO         reduce using rule 20 (declaracao_funcao -> cabecalho .)
    FLUTUANTE       reduce using rule 20 (declaracao_funcao -> cabecalho .)
    IDENTIFICADOR   reduce using rule 20 (declaracao_funcao -> cabecalho .)
    PRINCIPAL       reduce using rule 20 (declaracao_funcao -> cabecalho .)
    $end            reduce using rule 20 (declaracao_funcao -> cabecalho .)


state 14

    (9) atribuicao -> var . ATRIBUICAO expressao

    ATRIBUICAO      shift and go to state 23


state 15

    (22) cabecalho -> PRINCIPAL ABREPAR . lista_parametros FECHAPAR corpo FIM
    (23) lista_parametros -> . lista_parametros VIRGULA parametro
    (24) lista_parametros -> . parametro
    (25) lista_parametros -> . vazio
    (26) parametro -> . tipo DOISPONTOS IDENTIFICADOR
    (27) parametro -> . parametro ABRECOL FECHACOL
    (78) vazio -> .
    (17) tipo -> . INTEIRO
    (18) tipo -> . FLUTUANTE

    FECHAPAR        reduce using rule 78 (vazio -> .)
    VIRGULA         reduce using rule 78 (vazio -> .)
    INTEIRO         shift and go to state 2
    FLUTUANTE       shift and go to state 3

    vazio                          shift and go to state 27
    parametro                      shift and go to state 26
    lista_parametros               shift and go to state 25
    tipo                           shift and go to state 24

state 16

    (2) lista_declaracoes -> lista_declaracoes declaracao .

    INTEIRO         reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    FLUTUANTE       reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    IDENTIFICADOR   reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    PRINCIPAL       reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    $end            reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)


state 17

    (7) declaracao_variaveis -> tipo DOISPONTOS . lista_variaveis
    (10) lista_variaveis -> . lista_variaveis VIRGULA var
    (11) lista_variaveis -> . var
    (12) var -> . IDENTIFICADOR
    (13) var -> . IDENTIFICADOR indice

    IDENTIFICADOR   shift and go to state 29

    lista_variaveis                shift and go to state 28
    var                            shift and go to state 30

state 18

    (19) declaracao_funcao -> tipo cabecalho .

    INTEIRO         reduce using rule 19 (declaracao_funcao -> tipo cabecalho .)
    FLUTUANTE       reduce using rule 19 (declaracao_funcao -> tipo cabecalho .)
    IDENTIFICADOR   reduce using rule 19 (declaracao_funcao -> tipo cabecalho .)
    PRINCIPAL       reduce using rule 19 (declaracao_funcao -> tipo cabecalho .)
    $end            reduce using rule 19 (declaracao_funcao -> tipo cabecalho .)


state 19

    (21) cabecalho -> IDENTIFICADOR . ABREPAR lista_parametros FECHAPAR corpo FIM

    ABREPAR         shift and go to state 21


state 20

    (15) indice -> ABRECOL . expressao FECHACOL
    (16) indice -> ABRECOL . IDENTIFICADOR FECHACOL
    (46) expressao -> . expressao_simples
    (47) expressao -> . ATRIBUICAO
    (48) expressao_simples -> . expressao_aditiva
    (49) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (50) expressao_aditiva -> . expressao_multiplicativa
    (51) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (52) expressao_multiplicativa -> . expressao_unaria
    (53) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (54) expressao_unaria -> . fator
    (55) expressao_unaria -> . operador_soma fator
    (68) fator -> . ABREPAR expressao FECHAPAR
    (69) fator -> . var
    (70) fator -> . chamada_funcao
    (71) fator -> . numero
    (64) operador_soma -> . SOMA
    (65) operador_soma -> . SUBTRACAO
    (12) var -> . IDENTIFICADOR
    (13) var -> . IDENTIFICADOR indice
    (74) chamada_funcao -> . IDENTIFICADOR ABREPAR lista_argumentos FECHAPAR
    (72) numero -> . NUMERO
    (73) numero -> . NUMEROCIENTIFICO

    IDENTIFICADOR   shift and go to state 41
    ATRIBUICAO      shift and go to state 33
    ABREPAR         shift and go to state 32
    SOMA            shift and go to state 39
    SUBTRACAO       shift and go to state 45
    NUMERO          shift and go to state 35
    NUMEROCIENTIFICO shift and go to state 44

    chamada_funcao                 shift and go to state 38
    expressao_unaria               shift and go to state 31
    expressao_multiplicativa       shift and go to state 40
    expressao_simples              shift and go to state 42
    numero                         shift and go to state 43
    expressao_aditiva              shift and go to state 34
    operador_soma                  shift and go to state 36
    fator                          shift and go to state 46
    expressao                      shift and go to state 37
    var                            shift and go to state 47

state 21

    (21) cabecalho -> IDENTIFICADOR ABREPAR . lista_parametros FECHAPAR corpo FIM
    (23) lista_parametros -> . lista_parametros VIRGULA parametro
    (24) lista_parametros -> . parametro
    (25) lista_parametros -> . vazio
    (26) parametro -> . tipo DOISPONTOS IDENTIFICADOR
    (27) parametro -> . parametro ABRECOL FECHACOL
    (78) vazio -> .
    (17) tipo -> . INTEIRO
    (18) tipo -> . FLUTUANTE

    FECHAPAR        reduce using rule 78 (vazio -> .)
    VIRGULA         reduce using rule 78 (vazio -> .)
    INTEIRO         shift and go to state 2
    FLUTUANTE       shift and go to state 3

    vazio                          shift and go to state 27
    parametro                      shift and go to state 26
    lista_parametros               shift and go to state 48
    tipo                           shift and go to state 24

state 22

    (13) var -> IDENTIFICADOR indice .
    (14) indice -> indice . ABRECOL expressao FECHACOL

    VIRGULA         reduce using rule 13 (var -> IDENTIFICADOR indice .)
    INTEIRO         reduce using rule 13 (var -> IDENTIFICADOR indice .)
    FLUTUANTE       reduce using rule 13 (var -> IDENTIFICADOR indice .)
    IDENTIFICADOR   reduce using rule 13 (var -> IDENTIFICADOR indice .)
    PRINCIPAL       reduce using rule 13 (var -> IDENTIFICADOR indice .)
    $end            reduce using rule 13 (var -> IDENTIFICADOR indice .)
    FIM             reduce using rule 13 (var -> IDENTIFICADOR indice .)
    error           reduce using rule 13 (var -> IDENTIFICADOR indice .)
    ATRIBUICAO      reduce using rule 13 (var -> IDENTIFICADOR indice .)
    SE              reduce using rule 13 (var -> IDENTIFICADOR indice .)
    REPITA          reduce using rule 13 (var -> IDENTIFICADOR indice .)
    LEIA            reduce using rule 13 (var -> IDENTIFICADOR indice .)
    ESCREVA         reduce using rule 13 (var -> IDENTIFICADOR indice .)
    RETORNA         reduce using rule 13 (var -> IDENTIFICADOR indice .)
    ABREPAR         reduce using rule 13 (var -> IDENTIFICADOR indice .)
    SOMA            reduce using rule 13 (var -> IDENTIFICADOR indice .)
    SUBTRACAO       reduce using rule 13 (var -> IDENTIFICADOR indice .)
    NUMERO          reduce using rule 13 (var -> IDENTIFICADOR indice .)
    NUMEROCIENTIFICO reduce using rule 13 (var -> IDENTIFICADOR indice .)
    ATE             reduce using rule 13 (var -> IDENTIFICADOR indice .)
    SENAO           reduce using rule 13 (var -> IDENTIFICADOR indice .)
    MULTIPLICACAO   reduce using rule 13 (var -> IDENTIFICADOR indice .)
    DIVISAO         reduce using rule 13 (var -> IDENTIFICADOR indice .)
    MENOR           reduce using rule 13 (var -> IDENTIFICADOR indice .)
    MAIOR           reduce using rule 13 (var -> IDENTIFICADOR indice .)
    IGUALDADE       reduce using rule 13 (var -> IDENTIFICADOR indice .)
    DIFERENTE       reduce using rule 13 (var -> IDENTIFICADOR indice .)
    MENORIGUAL      reduce using rule 13 (var -> IDENTIFICADOR indice .)
    MAIORIGUAL      reduce using rule 13 (var -> IDENTIFICADOR indice .)
    NEGACAO         reduce using rule 13 (var -> IDENTIFICADOR indice .)
    ELOGICO         reduce using rule 13 (var -> IDENTIFICADOR indice .)
    FECHACOL        reduce using rule 13 (var -> IDENTIFICADOR indice .)
    FECHAPAR        reduce using rule 13 (var -> IDENTIFICADOR indice .)
    ENTAO           reduce using rule 13 (var -> IDENTIFICADOR indice .)
    ABRECOL         shift and go to state 49


state 23
